# payment-stuff

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build-and-push.yml
app/: constants.py  data.py  exceptions.py  qr.py  routes.py
app/api/: routes.py
app/services/: helpers.py  qr.py
templates/: bank.html  base.html  index.html  qr.html
tests/: test_qr.py  test_routes.py
tests/data/: banks.json
